--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "grunt-csso": "~0.7.0",
     "grunt-devtools": "~0.2.1",
     "grunt-sass": "~0.17.0",
-    "load-grunt-tasks": "~3.1.0"
+    "load-grunt-tasks": "~3.1.0",
+    "grunt-browserify-alias": "~0.1.0"
   },
   "engines": {
     "node": "0.10.x"
