--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "version": "0.0.1",
   "private": false,
   "dependencies": {
-    "bullet-pubsub": "^1.1.3",
-    "pixi.js": "git://github.com/GoodBoyDigital/pixi.js"
+    "pixi.js": "git://github.com/GoodBoyDigital/pixi.js#v2.2.5",
+    "bullet-pubsub": "~1.1.3"
   },
   "devDependencies": {
+    "browserify-alias-grunt": "~0.1.0",
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "~1.0.1",
-    "grunt-browser-sync": "^2.0.0",
+    "grunt-browser-sync": "~2.0.0",
     "grunt-browserify": "~3.3.0",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-copy": "~0.7.0",
@@ -25,10 +26,6 @@
     "grunt-csso": "~0.7.0",
     "grunt-devtools": "~0.2.1",
     "grunt-sass": "~0.17.0",
-    "load-grunt-tasks": "~3.1.0",
-    "grunt-browserify-alias": "~0.1.0"
-  },
-  "engines": {
-    "node": "0.10.x"
+    "load-grunt-tasks": "~3.1.0"
   }
 }
